results/classifier/105/graphic/1884728
graphic: 0.944
mistranslation: 0.942
instruction: 0.941
device: 0.934
semantic: 0.916
assembly: 0.914
other: 0.913
vnc: 0.909
network: 0.904
socket: 0.896
KVM: 0.887
boot: 0.857

facing build error for qemu-4.0.0 on SUSE11 OS

I am trying to compile qemu-4.0.0 on suse11 OS and facing the following error on the console:
ERROR: sizeof(size_t) doesn't match GLIB_SIZEOF_SIZE_T.
       You probably need to set PKG_CONFIG_LIBDIR
       to point to the right pkg-config files for your
       build target

Looking into the config.log file following is the error that is listed:

config-temp/qemu-conf.c:12:11: error: 'WACS_DEGREE' undeclared (first use in this function)
   add_wch(WACS_DEGREE);
           ^
config-temp/qemu-conf.c:12:11: note: each undeclared identifier is reported only once for each function it appears in

ld: skipping incompatible /usr/lib//libc.so when searching for -lc
ld: skipping incompatible /usr/lib//libc.a when searching for -lc
/tmp/ccmme6E4.o: In function `main':
qemu-conf.c:(.text+0x2b): undefined reference to `resize_term'
qemu-conf.c:(.text+0x32): undefined reference to `stdscr'
qemu-conf.c:(.text+0x49): undefined reference to `waddnwstr'
qemu-conf.c:(.text+0x50): undefined reference to `stdscr'
qemu-conf.c:(.text+0x67): undefined reference to `waddnwstr'
qemu-conf.c:(.text+0x6e): undefined reference to `_nc_wacs'
qemu-conf.c:(.text+0x7f): undefined reference to `stdscr'
qemu-conf.c:(.text+0x8d): undefined reference to `wadd_wch'
collect2: error: ld returned 1 exit status

Following are the details of the tools versions:
OS version = SUSE Linux Enterprise Server 11 (x86_64)
python = v2.7.10
glib = v2.56.1
gcc = v4.8.3
sdl2 = v2.0.12

Can someone help me understand the cause of this error?

regards,
Harshit



The part of the log you quote isn't the part which caused the failure. This bit is:


funcs: do_compiler do_cc compile_prog main
lines: 92 128 3672 0
/grid/avs/install/xcelium/1803/latest//tools/cdsgcc/gcc/bin/64bit/gcc -pthread -I/grid/common/pkgs/glib/v2.56.1/include/glib-2.0 -I/grid/common/pkgs/glib/v2.56.1/lib/glib-2.0/include -m64 -mcx16 -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wall -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -std=gnu99 -fPIC -I/grid/cva/p4_04/harshitm/ltssm_sj/panda/dev/src//Xtor/include -Wendif-labels -Wno-missing-include-dirs -Wempty-body -Wnested-externs -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wold-style-declaration -Wold-style-definition -Wtype-limits -Wno-missing-braces -o config-temp/qemu-conf.exe config-temp/qemu-conf.c -m64 -L/grid/cva/p4_04/harshitm/ltssm_sj/panda/dev/src//Xtor/lib -L/usr/lib/ -pthread -L/grid/common/pkgs/glib/v2.56.1/lib -lgthread-2.0 -lrt -lglib-2.0
ld: skipping incompatible /usr/lib//librt.so when searching for -lrt
ld: skipping incompatible /usr/lib//librt.a when searching for -lrt
ld: skipping incompatible /usr/lib//libpthread.so when searching for -lpthread
ld: skipping incompatible /usr/lib//libpthread.a when searching for -lpthread
ld: skipping incompatible /usr/lib//libc.so when searching for -lc
ld: skipping incompatible /usr/lib//libc.a when searching for -lc
/grid/common/pkgs/glib/v2.56.1/lib/libglib-2.0.so: undefined reference to `pthread_setname_np@GLIBC_2.12'
collect2: error: ld returned 1 exit status


That is, we tried to link against libglib, and it failed, because the compiler couldn't find a working pthread library. I see from your configure options that you're specifying a different C compiler and also different libraries:

'--cc=/grid/avs/install/xcelium/1803/latest//tools/cdsgcc/gcc/bin/64bit/gcc'
'--extra-cflags=-I/grid/cva/p4_04/harshitm/ltssm_sj/panda/dev/src//Xtor/include'
'--extra-ldflags=-L/grid/cva/p4_04/harshitm/ltssm_sj/panda/dev/src//Xtor/lib'
'--extra-ldflags=-L/usr/lib/'
'--cxx=/usr/bin/g++'

This is what's causing your problem -- the compile has picked up a version of libglib from whatever this /grid/ stuff is (/grid/common/pkgs/glib/v2.56.1/lib/libglib-2.0.so) but you're trying to get it to look for system libraries in /usr/lib when they are not compatible with the toolchain you're using (ld complains about them being incompatible). Trying to use this /grid/ gcc and the system g++ is probably not going to work very well either.

I think you need to either:
 (1) drop all this /grid/ tooling and use the system compiler and libraries to build QEMU
 (2) don't try to use the system compiler and libraries at all, instead make sure you have all the libraries and tools you need in /grid/ (including the C++ compiler and the pthread library and the C library), and don't tell configure to add the system libraries to the search path


